# youtube-dl-gui

./: CMakeLists.txt  README.md  index.html  main.cpp  params.json
lib/: downloadproperties.cpp  downloadproperties.h  youtubedl.cpp  youtubedl.h  youtubefiledownloader.cpp  youtubefiledownloader.h  youtubetitleretriever.cpp  youtubetitleretriever.h  youtubevideoformatretriever.cpp  youtubevideoformatretriever.h
res/: resources.qrc
ui/: downloaditem.cpp  downloaditem.h  downloaditemdelegate.cpp  downloaditemdelegate.h  downloadqueue.cpp  downloadqueue.h  preferences.cpp  preferences.h  preferences.ui  youtubedlgui.cpp  youtubedlgui.h  youtubedlgui.ui
util/: downloadmanager.cpp  downloadmanager.h  settings.cpp  settings.h
